--- a/LBW/LBW.csproj
+++ b/LBW/LBW.csproj
@@ -6,6 +6,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Report\**" />
+      <Content Remove="Report\**" />
+      <EmbeddedResource Remove="Report\**" />
+      <None Remove="Report\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="wwwroot\InformePrincipal\Report3.rdl~RF6d6252b.TMP" />
+      <Content Remove="wwwroot\InformePrincipal\ReportAnalisis1.rdl~RF59a2ba4.TMP" />
+    </ItemGroup>
+
+    <ItemGroup>
     <PackageReference Include="AspNetCore.Reporting" Version="2.1.0" />
     <PackageReference Include="Aspose.Cells" Version="24.6.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
@@ -21,12 +33,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.24" />
     <PackageReference Include="Microsoft.ReportingServices.ReportViewerControl.WebForms" Version="150.1652.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.17" />
+    <PackageReference Include="Spire.PDF" Version="10.6.25" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Report\" />
     </ItemGroup>
 
     <ProjectExtensions><VisualStudio><UserProperties TemplateFeatures="NETCORE" /></VisualStudio></ProjectExtensions>
