--- a/LBW/LBW.csproj
+++ b/LBW/LBW.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
+    <PackageReference Include="Zebra.Printer.SDK" Version="2.16.2905" />
     </ItemGroup>
 
     <ProjectExtensions><VisualStudio><UserProperties TemplateFeatures="NETCORE" /></VisualStudio></ProjectExtensions>
